# lanes

./: .gitignore  CONTEXT.md  PLAN-claude-session-switcher.md  PLAN-failed-states.md  PLAN-lane-driver.md  PLAN-lane-phase1.md  PLAN-lanes.md  PLAN-poc.md  PLAN-worktree-management.md  PLAN-worktree-setup.md  PLAN.md  README.md  go.mod  integration_test.go  main.go  rust-cli-plan.md
claude-session/: .gitignore  README.md  go.mod  main.go
claude-session/hooks/: session-end.sh  session-start.sh  session-state.sh
cmd/: clean.go  demo.go  down.go  init.go  open.go  root.go  status.go
internal/config/: config.go
internal/daemon/: daemon.go
internal/dashboard/: dashboard.go
internal/dnsmasq/: dnsmasq.go
internal/git/: git_test.go
internal/port/: port.go  port_test.go
internal/process/: process.go
internal/state/: state.go  state_test.go
lanes-cli/: Cargo.toml  README.md
lanes-cli/src/: config.rs  lib.rs  main.rs  model.rs  zone.rs
lanes-cli/src/cmd/: activate.rs  doctor.rs  list.rs  mod.rs
lanes-cli/src/drivers/: browser.rs  claude.rs  mod.rs  zellij.rs
spinner/: Makefile  go.sum  integration_test.go
spinner/cmd/: daemon.go  demo.go  dns.go  logs.go  open.go  register.go  setup.go  status.go  testenv.go  up.go  update.go  version.go
spinner/internal/config/: config.go  config_test.go
spinner/internal/daemon/: daemon.go
spinner/testapp/: main.go
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+5 files in other folders)
