[package]
name = "lanes-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "lanes_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lanes = { path = "../../lanes-cli" }
